--- a/force-app/main/default/classes/TotalizatorDao.cls
+++ b/force-app/main/default/classes/TotalizatorDao.cls
@@ -1,3 +1,4 @@
+//-------------------SOQL-------------------//
 public class TotalizatorDao {
     public static  List<Player__c> getPlayers(Integer limitNumber, Integer offset){
         List<Player__c> players = [SELECT Name,Name__c FROM Player__c WHERE Is_Black_List__c = false LIMIT :limitNumber OFFSET :offset];
@@ -5,7 +6,7 @@ public class TotalizatorDao {
     }
     
     public static  List<AggregateResult> getGamesCount(){
-        List<AggregateResult> countGames = [SELECT COUNT(Name) FROM Game__c];
+        List<AggregateResult> countGames = [SELECT COUNT(Id) FROM Game__c];
         return countGames;
     }
     
@@ -19,7 +20,6 @@ public class TotalizatorDao {
         Map<Id, Decimal> playerIdToTotalMoneyWon = new Map<Id, Decimal>();
         for(Player__c player : playersWithBets){
         	Decimal amountForPlayer = 0;
-            
             for(Bet__c bet : player.Bets__r){
                 if (bet.Status__c == 'Won'){
                     amountForPlayer += bet.Amount__c;
@@ -45,11 +45,28 @@ public class TotalizatorDao {
         }     
         return popularGames;
     }
+    //-------------------DML-------------------//   
     public static void createPlayer(String playerName, String playerEmail){
        Player__c player = new Player__c(Name__c = playerName,Email__c = playerEmail);
-        insert player;
+        Database.insert(player);
     }
-    public static void updatePlayer(Id betId, Decimal amount, Decimal percent){
-        
+    public static void updateBet(Id betId, Decimal amount, Decimal percent){
+        if ( (amount != null) || (percent != null) ){
+            Bet__c bet = new Bet__c(Id = betId);
+            if (amount != null){
+                bet.Amount__c = amount;
+            }
+            if(percent != null){
+                bet.Win_Rate__c = percent;
+            }
+            Database.update(bet);
+        }
+    }
+    public static void deleteBets(List<Id> betIds){
+        Database.delete(betIds);
+    }
+    public static void createBet(Id game, Id player, Decimal amount, Decimal winRate){
+        Bet__c bet = new Bet__c(Game__c = game, Player__c = player, Amount__c = amount, Win_Rate__c = winRate, Status__c = 'Pending');
+        Database.insert(bet);
     }
 }
