--- a/force-app/main/default/classes/TotalizatorDao.cls
+++ b/force-app/main/default/classes/TotalizatorDao.cls
@@ -1,7 +1,8 @@
 //-------------------SOQL-------------------//
 public class TotalizatorDao {
-    public static List<Player__c> getPlayers(Integer limitNumber, Integer offset){
-        return [SELECT Id, Name, Name__c FROM Player__c WHERE Is_Black_List__c = false LIMIT :limitNumber OFFSET :offset];
+    public static  List<Player__c> getPlayers(Integer limitNumber, Integer offset){
+        List<Player__c> players = [SELECT Name,Name__c FROM Player__c WHERE Is_Black_List__c = false LIMIT :limitNumber OFFSET :offset];
+        return players;
     }
     
     public static  List<AggregateResult> getGamesCount(){
@@ -15,11 +16,10 @@ public class TotalizatorDao {
     }
     
     public static Map<Id, Decimal> getTotalMoneyWon(Set<Id> playerIds){
+        List<Player__c> playersWithBets = [SELECT Id, (SELECT Amount__c, Status__c FROM Bets__r) FROM Player__c WHERE Id IN :playerIds];
         Map<Id, Decimal> playerIdToTotalMoneyWon = new Map<Id, Decimal>();
-        Decimal amountForPlayer;
-
-        for(Player__c player : [SELECT Id, (SELECT Amount__c, Status__c FROM Bets__r) FROM Player__c WHERE Id IN :playerIds]){
-        	 amountForPlayer = 0;
+        for(Player__c player : playersWithBets){
+        	Decimal amountForPlayer = 0;
             for(Bet__c bet : player.Bets__r){
                 if (bet.Status__c == 'Won'){
                     amountForPlayer += bet.Amount__c;
@@ -32,40 +32,41 @@ public class TotalizatorDao {
         }
         return playerIdToTotalMoneyWon;
     }
-    
     public static List<Player__c> getTopPlayers(Integer limitNumber, Integer offset){
-        return [SELECT Name, Name__c, Total_Money_Won__c FROM Player__c ORDER BY Total_Money_Won__c DESC LIMIT :limitNumber OFFSET :offset];
+        List<Player__c> maxTotalMoneyWon = [SELECT Name,Name__c,Total_Money_Won__c FROM Player__c ORDER BY Total_Money_Won__c DESC LIMIT :limitNumber OFFSET :offset];
+        return maxTotalMoneyWon;
     }
-
     public static Map<Id, Integer> getMostPopularGames(){
-        Map<Id, Integer> popularGames = new Map<Id, Integer>();
-
-        for(Game__c game : [SELECT Id, (SELECT Id FROM Bets__r) FROM Game__c]){
-            popularGames.put(game.Id, game.Bets__r.size());
+        List<Game__c> gamesWithBets = [SELECT Id,(Select Id FROM Bets__r) FROM Game__c];
+        Map<Id,Integer> popularGames = new Map<Id,Integer>();
+        for(Game__c game : gamesWithBets){
+            Integer betsSize = game.Bets__r.size();
+            popularGames.put(game.Id,betsSize);
         }     
         return popularGames;
     }
+    //-------------------DML-------------------//   
     public static void createPlayer(String playerName, String playerEmail){
-        Player__c player = new Player__c(Name__c = playerName,Email__c = playerEmail);
-         Database.insert(player);
-     }
-     public static void updateBet(Id betId, Decimal amount, Decimal percent){
-         if ( (amount != null) || (percent != null) ){
-             Bet__c bet = new Bet__c(Id = betId);
-             if (amount != null){
-                 bet.Amount__c = amount;
-             }
-             if(percent != null){
-                 bet.Win_Rate__c = percent;
-             }
-             Database.update(bet);
-         }
-     }
-     public static void deleteBets(List<Id> betIds){
-         Database.delete(betIds);
-     }
-     public static void createBet(Id game, Id player, Decimal amount, Decimal winRate){
-         Bet__c bet = new Bet__c(Game__c = game, Player__c = player, Amount__c = amount, Win_Rate__c = winRate, Status__c = 'Pending');
-         Database.insert(bet);
-     }
+       Player__c player = new Player__c(Name__c = playerName,Email__c = playerEmail);
+        Database.insert(player);
+    }
+    public static void updateBet(Id betId, Decimal amount, Decimal percent){
+        if ( (amount != null) || (percent != null) ){
+            Bet__c bet = new Bet__c(Id = betId);
+            if (amount != null){
+                bet.Amount__c = amount;
+            }
+            if(percent != null){
+                bet.Win_Rate__c = percent;
+            }
+            Database.update(bet);
+        }
+    }
+    public static void deleteBets(List<Id> betIds){
+        Database.delete([SELECT Id,Name FROM Bet__c WHERE Id = :betIds]);
+    }
+    public static void createBet(Id game, Id player, Decimal amount, Decimal winRate){
+        Bet__c bet = new Bet__c(Game__c = game, Player__c = player,Amount__c = amount , Win_Rate__c = winRate,Status__c = 'Pending');
+        Database.insert(bet);
+    }
 }
