--- a/force-app/main/default/classes/random.cls
+++ b/force-app/main/default/classes/random.cls
@@ -1,5 +1,6 @@
-public with sharing class random {
-    public random() {
-
+public class random {
+    public static void calc(){
+        Integer countExist = [SELECT Count() FROM Player__c];
+        System.debug(countExist);
     }
 }
